let just immutable wrapper insteda of copyOf
Signed-off-by: see-quick <maros.orsak159@gmail.com>